fix z-index

--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -1,7 +1,9 @@
 .modal {
     position: fixed;
+    top: 0;
+    left: 0;
     background-color: #C4C4C4;
-    z-index: -100;
+    z-index: 100;
     width: 100vw;
     height: 100vh;
 }
@@ -11,7 +13,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: var(--white);
     box-sizing: border-box;
     max-width: 428px;
     padding: 30px 40px 33px;
